@@ -3075,6 +3075,22 @@ stopifnot(exprs = {
 tools::assertWarning(x[60:68] %% 3)
 
 
+## Hilmar Berger's on R-devel list: 'data.frame() == NULL' etc
+d0. <- data.frame(a = numeric(0)) # zero length data.frame [ 0 x 1 ]
+d0  <- unname(d0.) # zero length data.frame __without names__
+d3   <- data.frame(a=1:3) # non-empty data.frame
+d30. <- d3[,FALSE] # <3 x 0>
+d30  <- unname(d30.)
+for(DF in list(d0., d0, d30., d30))
+    for(R in list(1, NULL, logical(0)))
+	stopifnot(exprs = {
+	    is.logical(r <- DF == R)
+	    is.matrix(r) ## ~~~~~~~
+	    length(r) == 0
+	    dim(r) <= dim(DF) # sometimes r is <0 x 0> when DF is not
+	})
+
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
